# Tegridy-AI-TRPG

./: .env.example  .gitignore  AGENTS.md  README.md  _quick_test.py  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  scratch.py
e2e_test/: __init__.py  __main__.py  auto_runner.py  player_agent.py  run.py
prompt/: 异景主持人.md  异景挑战创作者.md
prompt, rules and conpects/: legend_in_mists_reactions.md  legend_in_mists_taking_actions.md  lengend_in_mists_story_tags.md  异景剧集和场景创作者.md  异景后果与缓解.md  异景物品创作者.md  异景玩家行动规则.md  异景运作场景.md
src/: __init__.py  agent_prompts.py  agent_runner.py  context.py  engine.py  formatter.py  game_loop.py  json_parser.py  llm_client.py  logger.py  models.py  preset_data.py
src/agents/: __init__.py  _utils.py  base.py  compressor.py  consequence.py  continuation_check.py  effect_actualization.py  intent.py  item_creator.py  limit_break.py  move_gatekeeper.py  narrator.py  resolution_mode.py  rhythm.py  scene_creator.py  scene_director.py  tag_matcher.py  validator.py
src/display/: __init__.py  console.py
src/effects/: __init__.py  applicator.py
src/pipeline/: __init__.py  _item_manager.py  _tag_utils.py  move_pipeline.py  pipeline_result.py
src/state/: __init__.py  game_state.py  global_state.py  scene_state.py
tests/: helpers.py  test_display.py  test_effect_applicator.py  test_engine.py  test_formatter.py  test_game_loop.py  test_game_state.py  test_global_state.py  test_json_parser.py  test_llm_client.py  test_models.py  test_pipeline_result.py  test_scene_state.py  test_step.py  test_tag_utils.py
(+30 files in other folders)
